<resources>
    <string name="app_name">Hang Game</string>
    <string name="title_app_name">HANG GAME</string>
    <string name="posicion">Position:</string>
    <string name="letra">Letter:</string>
    <string name="puntos">Points: %d</string>
    <string name="vidas">N.º Lives: %d</string>
    <string name="vidas_static">N.º Lives:</string>
    <string name="play">Play!</string>
    <string name="start">Start</string>
    <string name="end">Finalize</string>
    <string name="comodin">Allow wildcard * in position</string>
    <string name="easy">Easy</string>
    <string name="normal">Medium</string>
    <string name="hard">Advanced</string>
    <string name="level">Difficulty</string>
    <string name="options_title">GAME OPTIONS</string>
    <string name="back">Back</string>
    <string name="user_title">USER REGISTER</string>
    <string name="name">Name</string>
    <string name="user_subtitle">Last players score</string>
    <string name="options">Options</string>
    <string name="player">Player</string>
    <string name="playing">Playing %s</string>
    <string name="default_player_name">Player 1</string>
    <string name="winner_player">%s has acertado la palabra, conseguistes %d puntos</string>
    <string name="loser_player">%s the word was %s, you got %d points</string>
    
    <string-array name="wods_game">
        <item>Ordenador</item><item>Procesador</item><item>Navegador</item><item>Microfono</item>
        <item>Teclado</item><item>Cascos</item><item>Android</item><item>Programador</item>
        <item>Raton</item><item>Escritorio</item><item>Apple</item><item>Deloitte</item>
        <item>Alfombrilla</item><item>Carpeta</item><item>Microsoft</item><item>Papelera</item>
        <item>Monitor</item><item>Fichero</item><item>Intel</item><item>Internet</item>
    </string-array>
    
</resources>
