<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.UserActivity"
    android:padding="30dp"
    android:orientation="vertical"
    android:background="@color/bakgroundColor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_title"
        android:textSize="@dimen/normal_font"
        android:gravity="center"
        android:layout_marginVertical="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/extra_extra_small_font"/>

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alejandro"
        android:textSize="@dimen/small_font"
        android:layout_marginTop="-7dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_subtitle"
        android:textSize="@dimen/small_font"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listScore"
            android:layout_width="match_parent"
            android:textSize="@dimen/extra_small_font"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="25dp"/>

        <Button
            android:id="@+id/btBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="@dimen/small_font"
            android:background="@drawable/start_button_selector"
            android:textColor="@color/bakgroundColor"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</LinearLayout>